# distributed-kv-store

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: main.cpp
src/client/: kv_client.cpp  kv_client.h
src/cluster/: consistent_hash.cpp  consistent_hash.h  membership.cpp  membership.h  replication.cpp  replication.h
src/common/: config.h  logger.h  murmurhash3.cpp  murmurhash3.h  protocol.h  thread_pool.h  types.h
src/server/: coordinator.cpp  coordinator.h  tcp_server.cpp  tcp_server.h
src/storage/: storage_engine.cpp  storage_engine.h  wal.cpp  wal.h
tests/: CMakeLists.txt  test_consistent_hash.cpp  test_quorum.cpp  test_storage_engine.cpp  test_wal.cpp
tools/: benchmark.py  cli_client.cpp  cluster_test.py
